[gd_scene load_steps=24 format=3 uid="uid://b700f06xtqt3l"]

[ext_resource type="Script" uid="uid://bl70p2fam542a" path="res://Scenes/treasure/treasure.gd" id="1_pxeoq"]
[ext_resource type="Script" uid="uid://dvkyibkqq8n0d" path="res://custom_resources/relic.gd" id="2_8tegm"]
[ext_resource type="AudioStream" uid="uid://dqhy4ko0r1q1" path="res://art/(Loop) Dungeon.wav" id="2_dbys1"]
[ext_resource type="Resource" uid="uid://q6aht1wbr44b" path="res://relics/blood_diamond.tres" id="3_mq4tk"]
[ext_resource type="Resource" uid="uid://b1xsbxqwlr8h4" path="res://relics/shovel_knight_shovel.tres" id="4_ovqvi"]
[ext_resource type="Texture2D" uid="uid://b3m4my3eil51h" path="res://art/1bit/rarity.png" id="5_4pmp6"]
[ext_resource type="Resource" uid="uid://o0g4wyqtlh1g" path="res://relics/mana_potion.tres" id="5_q5cxl"]
[ext_resource type="Resource" uid="uid://c6r8mdjpsdpo7" path="res://relics/healing_potion.tres" id="6_kb3ey"]
[ext_resource type="Resource" uid="uid://bupu28ochu3f4" path="res://relics/necronomicon.tres" id="7_atwrd"]
[ext_resource type="Texture2D" uid="uid://bux5cyl52642c" path="res://art/1bit/Relics Sources/bg-rewards-1.png" id="9_28usl"]
[ext_resource type="FontFile" uid="uid://c3ns0nhty0opb" path="res://art/alagard.ttf" id="10_pdnmm"]
[ext_resource type="Texture2D" uid="uid://b13r4xqisln7m" path="res://art/1bit/Relics Sources/bg-rewards-treasure-open-01.png" id="11_na2m4"]
[ext_resource type="Texture2D" uid="uid://bctyrdqb8ua2e" path="res://art/1bit/Relics Sources/bg-rewards-treasure-open-03.png" id="12_bv0u5"]

[sub_resource type="LabelSettings" id="LabelSettings_jvem4"]
font = ExtResource("10_pdnmm")
font_color = Color(0.333333, 1, 1, 1)
outline_size = 4
outline_color = Color(0.000693898, 0.000693898, 0.000693898, 1)
shadow_size = 4
shadow_color = Color(0.29219, 0.29219, 0.29219, 1)

[sub_resource type="Animation" id="Animation_nwvdk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("11_na2m4")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_k6h1x"]
resource_name = "highlight"
length = 2.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_a16f6"]
resource_name = "open"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("11_na2m4"), ExtResource("12_bv0u5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_treasure_opened"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_53s2s"]
_data = {
&"RESET": SubResource("Animation_nwvdk"),
&"highlight": SubResource("Animation_k6h1x"),
&"open": SubResource("Animation_a16f6")
}

[sub_resource type="Curve" id="Curve_hnuf8"]
_data = [Vector2(0, 0.21978), 0.0, 0.0, 0, 0, Vector2(0.169492, 1), 0.0, 0.0, 0, 0, Vector2(0.847458, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_6hha4"]
curve = SubResource("Curve_hnuf8")

[sub_resource type="Curve" id="Curve_d8bb0"]
_data = [Vector2(0, 0.120879), 0.0, 1.15488, 0, 0, Vector2(0.231638, 1), 0.0, 0.0, 0, 0, Vector2(0.751412, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.538462), 0.421429, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_iu7j3"]
curve = SubResource("Curve_d8bb0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_eo2ah"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
initial_velocity_min = 80.0
initial_velocity_max = 100.0
gravity = Vector3(0, 98, 0)
scale_curve = SubResource("CurveTexture_iu7j3")
alpha_curve = SubResource("CurveTexture_6hha4")

[node name="Treasure" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_pxeoq")
treasure_relic_pool = Array[ExtResource("2_8tegm")]([ExtResource("3_mq4tk"), ExtResource("4_ovqvi"), ExtResource("5_q5cxl"), ExtResource("6_kb3ey"), ExtResource("7_atwrd")])
music = ExtResource("2_dbys1")

[node name="Background" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("9_28usl")
centered = false
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -39.0
offset_right = 55.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
text = "A Mistery Box
"
label_settings = SubResource("LabelSettings_jvem4")
horizontal_alignment = 1

[node name="TreasureChest" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.564
anchor_right = 0.5
anchor_bottom = 0.564
offset_left = -20.0
offset_top = -14.216
offset_right = 20.0
offset_bottom = 25.784
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 20)
mouse_filter = 0
texture = ExtResource("11_na2m4")
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="TreasureChest"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_53s2s")
}
autoplay = "highlight"

[node name="GPUParticles2D" type="GPUParticles2D" parent="TreasureChest"]
position = Vector2(35, 39)
emitting = false
amount = 25
process_material = SubResource("ParticleProcessMaterial_eo2ah")
texture = ExtResource("5_4pmp6")
lifetime = 1.5
one_shot = true
explosiveness = 0.9

[connection signal="gui_input" from="TreasureChest" to="." method="_on_treasure_chest_gui_input"]
